Added Task update functionality
- Implmented Push Notifications
- Implemented forget password functionalty
- Add Profile update and logout functionalty

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   shared_preferences: ^2.5.3
   tflite_flutter: ^0.11.0
   logger: ^2.5.0
+  permission_handler: ^11.0.1
+  google_sign_in: ^6.1.4
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
+  url_launcher: ^6.1.12
+
+
 
 dev_dependencies:
   flutter_test:
